@@ -1,3 +1,12 @@
+2005-05-06 Alain Magloire
+	PR 93902 to fix warnings.
+	* plugin.xml
+	* src/org/eclipse/cdt/internal/ui/search/FindDeclarationsInWorkingSet.java
+	* src/org/eclipse/cdt/internal/ui/search/FindRefsInWorkingSet.java
+	* src/org/eclipse/cdt/internal/ui/search/WorkingSetFindAction.java
+	* src/org/eclipse/cdt/internal/ui/text/HelpCompletionContribution.java
+	* src/org/eclipse/cdt/ui/CUIPlugin.java
+
 2005-05-04 Vladimir Hirsl
 	Fix for PR 92599: [Indexer] Remove annotation markers preference from DOMIndexer & friends
 	Replaced indexer problem markers property page block for DOMIndexer.
